# python_concepts

./: .gitignore  README.md  pyproject.toml  requirements.txt
beautiful_soup/: main.py
beautiful_soup_example/: basic_example.py  real_webiste_scraper.py
decorators/: NOTES.md  main.py
generators/: mem_profile.py  numbers.py  people.py
graphs/: find_source_dag.ipynb
grpc_example/: README.md
iterators/: MyRange.py  NOTES.md  Sentence.py  itertools_module_basics.py  main.py
lambdas/: basic_example.ipynb  lambda_calculus.ipynb
linear_probing/: DEMO.ipynb  README.md  hash_table.py
linear_programming/: LP.ipynb
mypy_example/: README.md  main.py  mypy.ini
os/: main.py
os_example/: main.py
page_rank/: PageRank.ipynb
poetry/: README.md
poetry/poetry-demo/: pyproject.toml
profiling_code/: README.md  main.py  slow_random.py
protobuf_example/: README.md  addressbook.proto
regex_example/: basic_example.py  emails_matching.py  urls_matching_groups.py
requests/: main.py
requests_examples/: async_requests_example.py  basic_example.py  real_webiste_scraper.py  sample_scraper.py  special_stuff.py  wikipedia_crawler.py
sql/: nba_players.ipynb  requirements.txt  sql_basics.ipynb
steganography/: README.md  main.py
str_vs_repr/: main.py
testing/: test_employee.py  unittest_calc.py
threading_multiprocessing/: multiprocessing_example.py  multiprocessing_process_images.py  threading_download_images.py  threading_example.py  (+2 more)
uv_package_manager/default_lib/: pyproject.toml
uv_package_manager/default_lib/src/default_lib/: __init__.py
(+34 files in other folders)
