[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Maciej Kaczkowski <Maciej.Kaczkowski.stud@pw.edu.pl>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
numpy = "^1.25.0"
pendulum = "^2.1.2"
psycopg2-binary = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
