[project]
name = "default-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maciej Kaczkowski", email = "Maciej.Kaczkowski.stud@pw.edu.pl" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
